# datadog-badges

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
src/: 404.html  badge.rs  datadog.rs  lib.rs  main.rs
src/test_data/: sample.json
