[package]
name = "datadog-badges"
version = "0.1.0"
authors = ["Stephen Connolly <stephen.alan.connolly@gmail.com>"]
edition = "2018"

[dependencies.base64]
version = "0.11.0"

[dependencies.cached]
version = "0.11.0"

[dependencies.chrono]
version = "0.4.10"

[dependencies.ctrlc]
version = "3.1.3"
features = ["termination"]

[dependencies.env_logger]
version = "0.7.1"

[dependencies.getopts]
version = "0.2.21"

[dependencies.log]
version = "0.4.8"

[dependencies.regex]
version = "1.3.4"

[dependencies.reqwest]
version = "0.10.1"
features = ["default","json","gzip"]

[dependencies.rusttype]
version = "0.8.2"

[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[dependencies.serde_json]
 version = "1.0.45"

[dependencies.serde_urlencoded]
version = "0.6.1"

[dependencies.tokio]
version = "0.2.11"
features = ["macros"]

[dependencies.warp]
version= "0.2.1"

